Remove /applications/{applicationId}/requests-for-placement/{requestForPlacementId} api endpoint
