# src/main/resources/static/api.yml
@@ -2125,44 +2125,6 @@ paths:
                 $ref: '_shared.yml#/components/schemas/Problem'
         500:
           $ref: '_shared.yml#/components/responses/500Response'
-  /applications/{applicationId}/requests-for-placement/{requestForPlacementId}:
-    get:
-      summary: Returns the specified Request for Placement.
-      operationId: applicationsApplicationIdRequestsForPlacementRequestForPlacementIdGet
-      parameters:
-        - name: applicationId
-          in: path
-          description: ID of the application which the Request for Placement enacts.
-          required: true
-          schema:
-            type: string
-            format: uuid
-        - name: requestForPlacementId
-          in: path
-          description: ID of the Request for Placement.
-          required: true
-          schema:
-            type: string
-            format: uuid
-      responses:
-        200:
-          description: successful operation
-          content:
-            'application/json':
-              schema:
-                $ref: '_shared.yml#/components/schemas/RequestForPlacement'
-        401:
-          $ref: '_shared.yml#/components/responses/401Response'
-        403:
-          $ref: '_shared.yml#/components/responses/403Response'
-        404:
-          description: invalid CRN
-          content:
-            'application/json':
-              schema:
-                $ref: '_shared.yml#/components/schemas/Problem'
-        500:
-          $ref: '_shared.yml#/components/responses/500Response'
   /bookings/{bookingId}:
     get:
       summary: Gets a booking
